tests/fixtures/validate_function_name/bad/aggregation.py
"""Test fixture: Aggregation detection."""


def get_total(numbers: list[int]) -> int:
    """Calculate sum of numbers."""
    return sum(numbers)


def get_max_value(data: list[float]) -> float:
    """Find maximum value."""
    return max(data)
